traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    external-dns.alpha.kubernetes.io/hostname: traefik.home.coolkev.com
  name: traefik-dashboard-homelab
  namespace: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.home.coolkev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
