traefik/traefik-dashboard.yaml
# traefik-dashboard.yaml
# Needs to be customized because we need to ensure that all IngressRoutes have a Host matcher, otherwise traffic will be stolen from other services
# The default IngressRoute shipped with traefik steals /api or /dashboard traffic from any other service.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.home.coolkev.com
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.home.coolkev.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      services:
        - kind: TraefikService
          name: api@internal
  tls: {} # served on websecure
